--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,21 +1,8 @@
-/* Navbar styles */
+/* Nav.ccs */
 .navbar {
-    margin-bottom: 20px;
+    width: 700px; /* Adjust the width as needed */
+    height: 100%; /* Ensure sidebar takes full height */
+    background-color: #000000; /* Change background color as desired */
+    padding: 20px; /* Add padding to create space between content and edges */
+    border-radius: 20px; /* Adds rounded corners */
   }
-  
-  .navbar-brand {
-    font-size: 1.5rem;
-  }
-  
-  .navbar-nav .nav-item {
-    margin-right: 10px;
-  }
-  
-  .navbar-nav .nav-link {
-    color: #fff;
-  }
-  
-  .navbar-nav .nav-link:hover {
-    color: #ddd;
-  }
-  
